Enhance Direccion and ItemCarrito entity tests with additional scenarios and service integration